2003-05-30  Miguel de Icaza  <miguel@ximian.com>

	* Methods.cs (MakeResponseSerializer): OneWay is not the only
	condition to catch;  Also void return types are not required to
	have a response.

	(MakeRequestSerializer): InParameters *might* be ref parameters,
	deal with that here too.

	Add some debugging code for tracking down missing implementation
	details in serialization creation.

	(MakeResponseSerializer): DUH.  Use the
	ResponseName/ResponseNamespace for the member import, not the
	RequestName and RequestNamespace.  The bugs of cut-and-paste.

2003-05-29  Miguel de Icaza  <miguel@ximian.com>

	* SoapHttpClientProtocol.cs (CreateMessage): Kill.  Move
	functionality to Invoke.

	(Invoke): Use new TypeStubInfo/MethodStubInfo instead.

	* SoapClientMessage.cs: Drop old mechanism, use MethodStubInfo instead.

	* Methods.cs: New file.  Contains the managed for TypeStubs and
	MethodInfoStubs.   

	A MethodInfoStub contains the serializers we use for the SOAP
	request. 

	* SoapClientMessage.cs: Drop parameters from the clientmessage, it
	does not belong here.  Drop oneway, we canextract that from the
	SoapDocumentMethodAttribute class that we pass.

2003-05-28  Miguel de Icaza  <miguel@ximian.com>

	* LogicalMethodInfo.cs (Create): Implement begin/end method
	pairing.
	(Name): Implement. 
	(EndMethodInfo): Always return end_method_info.

2003-04-30  Miguel de Icaza  <miguel@ximian.com>

	* SoapHttpClientProtocol.cs: Flag the methods in the chain that
	gets the caller method as non-inlineable.

2003-04-29  Miguel de Icaza  <miguel@ximian.com>

	* SoapHttpClientProtocol.cs (CreateMessage): Extract information
	from the method to be called.

	* SoapDocumentMethodAttribute.cs: Do not initialize all the fields
	on the attribute at bootstrap, for default values, just compute
	them when queried.

	* SoapMessage.cs (SetStage): New internal method, used to register
	the stage as we move along the soap pipeline.
